5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1793_3138.log
== TEST (2019-05-30 18:30:28) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros:")))
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:13) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros:")))
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
total=sum(m,dtype=float)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:49) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros:")))
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
total=sum(m,dtype=float)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:34:36) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros:")))
m=((v[0]*v[1]*v[2]*v[v-1])**1/n)
total=(m,dtype=float)
print(round(total,2))
-- ERROR:
File "XXXX", line 4
    total=(m,dtype=float)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:03) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros:")))
m=((v[0]*v[1]*v[2]*v[v-1])**1/n)
media=m, dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:35:38) 
-- CODE:
from numpy import*
n=array(eval(input("digite n numeros:")))
m=((v[0]*v[1]*v[2]*v[v-1])**1/n)
media=m, dtype=float
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:30) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(n)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:59) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(v)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:17) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(v)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:12) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
v=sum(v,dtype=float)
n=size(v)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
v=(v,dtype=float)
n=size(v)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
File "XXXX", line 3
    v=(v,dtype=float)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:56) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(v)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:45:14) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(v)
m=((v[0]**7+v[1]**7+v[2]**7+v[n-1]**7)/n)**1/7
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:23) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:24) 
-- CODE:
from numpy import*
v=array(eval(input("digite n numeros:")))
n=size(v)
i=0
while(i<size(v)):
	m=m+v[i]
	i=i+1
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
